--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -11,6 +11,11 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="main-diary"></ion-nav-view>
   </ion-tab>
 
+  <!-- Bluetooth Tab -->
+  <ion-tab title="{{'bluetooth.bluetooth' | translate}}" icon="ion-bluetooth" href="#/root/main/bluetooth" hideWhen="ios">
+    <ion-nav-view name="main-bluetooth"></ion-nav-view>
+  </ion-tab>
+
   <!-- Common Patterns Tab
   <ion-tab title="Common" icon="ion-star" href="#/root/main/common/map">
     <ion-nav-view name="main-common"></ion-nav-view>
