Add a second onboarding page
- which explains which permissions we need
- why we need them, and
- which prompt to select

--- a/www/templates/intro/summary.html
+++ b/www/templates/intro/summary.html
@@ -21,7 +21,7 @@
 	</div>
 </ion-content>
 <ion-footer-bar class="no-bgColor" id="intro-footer">
-  <button class="button button-block button-outline button-positive" ng-click="agree()">
+  <button class="button button-block button-outline button-positive" ng-click="next()">
     GETTING STARTED
   </button>
 </ion-footer-bar>
