Get it to the point where there is no WSOD
Still not sure that this actually works. Will have to see how the emulator
deals with this or try it on a real phone.

--- a/www/templates/bluetooth/list.html
+++ b/www/templates/bluetooth/list.html
@@ -1,4 +1,7 @@
 <ion-view view-title="{{ 'bluetooth.title' | translate }}" ng-class="ion-view-background" translate-namespace="bluetooth">
+  <ion-nav-buttons side="right">
+    <button class="button button-icon ion-refresh" ng-click="refresh()"></button>
+  </ion-nav-buttons>
   
   <div style="background-color:transparent; border-left-style:solid; border-left-width:.5px; border-left-color:#212121; margin-left:10%; position:absolute; float:left; height:100%"></div>
   
