Use modified API in Bluetooth tab

--- a/www/templates/bluetooth/list.html
+++ b/www/templates/bluetooth/list.html
@@ -1,14 +1,8 @@
-<ion-view ng-class="ion-view-background" translate-namespace="bluetooth">
+<ion-view view-title="{{ 'bluetooth.title' | translate }}" ng-class="ion-view-background" translate-namespace="bluetooth">
   <ion-nav-buttons side="right">
     <button class="button button-icon ion-refresh" ng-click="refresh()"></button>
-    <button class="button button-icon ion-play" ng-click="startScan()"></button>
-    Scan
-    <button class="button button-icon ion-stop" ng-click="stopScan()"></button>
-  </ion-nav-buttons>
-  <ion-nav-buttons side="left">
-    <button class="button button-icon ion-play" ng-click="startAdvertiser()"></button>
-    Advertise
-    <button class="button button-icon ion-stop" ng-click="stopAdvertiser()"></button>
+    <button class="button button-icon ion-play" ng-click="start()"></button>
+    <button class="button button-icon ion-stop" ng-click="stop()"></button>
   </ion-nav-buttons>
   
   <div style="background-color:transparent; border-left-style:solid; border-left-width:.5px; border-left-color:#212121; margin-left:10%; position:absolute; float:left; height:100%"></div>
@@ -17,12 +11,12 @@
     <ion-refresher pulling-text="{{ 'pull-to-refresh' | translate }}" on-refresh="refresh()"></ion-refresher>
     <ion-list>
       <div collection-repeat="cen in data" style="margin-top:16px">
-        <div class="start-time-tag" style="top:20px; {{ cen.ad ? 'background:#ddd' : '' }}">{{ formatTime(cen.ts) }}</div>
+        <div class="start-time-tag" style="top:20px; {{ cen.type == 'scan' ? '' : 'background:#ddd' }}">{{ formatTime( cen.ts ) }}</div>
         <div style="padding-left:19%">
           <ion-item id="bluetooth-item" class="list-item" style="background-color: transparent; border:none; height:auto; padding:8px 16px">
-          <div id="bluetooth-card" class="list card list-card" style="height:auto; width:100%; margin:0; background:{{ cen.ad ? '#f8f8f8' : '#eeffff' }}">
+            <div id="bluetooth-card" class="list card list-card" style="height:auto; width:100%; margin:0; background:{{ cen.type == 'scan' ? '#eeffff' : '#f8f8f8' }}">
               <div style="padding:10px; display:flex; align-items:center">
-              <i class="icon ion-log-{{ cen.ad ? 'out' : 'in' }}" style="color:{{ cen.ad ? '#999' : '#2b9' }}"></i>
+              <i class="icon ion-log-{{ cen.type == 'scan' ? 'in' : 'out' }}" style="color:{{ cen.type == 'scan' ? '#2b9' : '#999' }}"></i>
                 <span style="font-size:.8em; padding-left:8px">{{ cen.number }}</span>
               </div>
             </div>
