Add new icon & splash

--- a/www/templates/splash/splash.html
+++ b/www/templates/splash/splash.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content style="background-image:url(img/intro/splash_screen_logo.png)">
+    <ion-content style="background:url(img/intro/splash_screen_logo.png) 50% 50% / cover">
         <center>
             <ion-spinner></ion-spinner>
         </center>
