--- a/www/templates/aware/aware.html
+++ b/www/templates/aware/aware.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Aware" ng-class="ionViewBackgroundClass()">
     <ion-nav-bar class="bar-stable">
     </ion-nav-bar>
-    <ion-nav-buttons side="right">
+    <!-- <ion-nav-buttons side="right">
       <button id="accessmap-help"
               class="button button-icon ion-help"
               ng-click="startWalkthrough()"></button>
-    </ion-nav-buttons>
+    </ion-nav-buttons> -->
     <ion-content>
       <!--iframe id="accessmap-webframe"
               style = "display: block;border: none;height: 80vh; width: 100vw;";
