--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -12,9 +12,14 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Bluetooth Tab -->
-  <ion-tab title="{{'bluetooth.bluetooth' | translate}}" icon="ion-bluetooth" href="#/root/main/bluetooth" hideWhen="ios">
-    <ion-nav-view name="main-bluetooth"></ion-nav-view>
+  <ion-tab title="Aware" icon="ion-map" href="#/root/main/aware">
+    <ion-nav-view name="main-aware"></ion-nav-view>
   </ion-tab>
+
+    <!-- Aware Tab -->
+    <ion-tab title="{{'bluetooth.bluetooth' | translate}}" icon="ion-bluetooth" href="#/root/main/bluetooth" hideWhen="ios">
+      <ion-nav-view name="main-bluetooth"></ion-nav-view>
+    </ion-tab>
 
   <!-- Common Patterns Tab
   <ion-tab title="Common" icon="ion-star" href="#/root/main/common/map">
