update manual sync

--- a/www/templates/aware/aware.html
+++ b/www/templates/aware/aware.html
@@ -29,5 +29,13 @@
         ng-click="joinStudy()">
         Join Study
       </button>
+
+      <button
+        id="manual-sync-button"
+        style="display: block;margin-left: auto;margin-right: auto;width: 80%;color: #fff;font-weight: 600;border: 0px;background-color: #01D0A7;"
+        class="button"
+        ng-click="manualSync()">
+        Manual Sync
+      </button>
     </ion-content>
   </ion-view>
