fix the openAware() scope name

--- a/www/templates/aware/aware.html
+++ b/www/templates/aware/aware.html
@@ -19,7 +19,7 @@
         id="open-accessmap-button"
         style="display: block;margin-left: auto;margin-right: auto;width: 80%;color: #fff;font-weight: 600;border: 0px;background-color: #01D0A7;"
         class="button"
-        ng-click="openBrowser()">
+        ng-click="openAware()">
         Open Aware
       </button>
       <button
