--- a/www/templates/aware/aware.html
+++ b/www/templates/aware/aware.html
@@ -16,11 +16,11 @@
               mozallowfullscreen='true'></iframe-->
       <div style="height: 20px;"></div>
       <button
-        id="open-accessmap-button"
+        id="check-battery-button"
         style="display: block;margin-left: auto;margin-right: auto;width: 80%;color: #fff;font-weight: 600;border: 0px;background-color: #01D0A7;"
         class="button"
         ng-click="openAware()">
-        Open Aware
+        Check Battery Optimization
       </button>
       <button
         id="join-study-button"
@@ -36,6 +36,14 @@
         class="button"
         ng-click="manualSync()">
         Manual Sync
+      </button>
+
+      <button
+        id="display-deviceid-button"
+        style="display: block;margin-left: auto;margin-right: auto;width: 80%;color: #fff;font-weight: 600;border: 0px;background-color: #01D0A7;"
+        class="button"
+        ng-click="displayDeviceId()">
+        Display DeviceId
       </button>
     </ion-content>
   </ion-view>
