--- a/www/templates/aware/aware.html
+++ b/www/templates/aware/aware.html
@@ -17,8 +17,15 @@
       <div style="height: 20px;"></div>
       <div>
         <label>Name:</label>
-        <input type="text" ng-model="yourName" placeholder="Enter your PID">
-        <hr>
+        <input id="input_pid" type="text" ng-model="yourName" placeholder="Enter your PID">
+        <button 
+          id="join"
+          ng-click="joinStudy(yourName)"
+          class="button"
+          style="background-color: #01D0A7;">
+          Join
+        </button>
+        <!-- <hr> -->
         <!-- <h1>Hello {{yourName}}!</h1> -->
       </div>
       <button
@@ -28,13 +35,13 @@
         ng-click="checkBattery()">
         Check Battery Optimization
       </button>
-      <button
+      <!-- <button
         id="join-study-button"
         style="display: block;margin-left: auto;margin-right: auto;width: 80%;color: #fff;font-weight: 600;border: 0px;background-color: #01D0A7;"
         class="button"
         ng-click="joinStudy()">
         Join Study
-      </button>
+      </button> -->
 
       <button
         id="manual-sync-button"
@@ -50,6 +57,14 @@
         class="button"
         ng-click="displayDeviceId()">
         Display DeviceId
+      </button>
+
+      <button
+        id="display-pid-button"
+        style="display: block;margin-left: auto;margin-right: auto;width: 80%;color: #fff;font-weight: 600;border: 0px;background-color: #01D0A7;"
+        class="button"
+        ng-click="displayPid()">
+        Display PID
       </button>
     </ion-content>
   </ion-view>
