update UI naming

--- a/www/templates/aware/aware.html
+++ b/www/templates/aware/aware.html
@@ -16,7 +16,7 @@
               mozallowfullscreen='true'></iframe-->
       <div style="height: 20px;"></div>
       <div>
-        <label>Name:</label>
+        <label>PID:</label>
         <input id="input_pid" type="text" ng-model="yourName" placeholder="Enter your PID">
         <button 
           id="join"
